Add helpful batch files, vscode tasks and cursor rules

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
 		{
 			"label": "Build Startup",
 			"type": "shell",
-			"command": "${workspaceFolder}/projects/main/build.bat",
+			"command": "${workspaceFolder}/projects/startup/build.bat",
 			"problemMatcher": []
 		},
 		{
